test/mutation_analysis/s0326_power_of_three/hafis/starchat/mutants/12/result.txt
./test/mutation_analysis/s0326_power_of_three/hafis/starchat/mutants/12/Solution.java:26: error: unreachable statement
        return true;
        ^
1 error
